--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -1,29 +1,29 @@
 {
-  "title": "Earthquake Simulation",
-  "start-date-label": "Start Date:",
-  "end-date-label": "End Date:",
-  "min-magnitude-label": "Min Magnitude:",
-  "max-magnitude-label": "Max Magnitude:",
-  "simulate-btn": "Simulate",
-  "show-hotspots-btn": "Show Hotspots",
-  "time-slider-label": "Time:",
-  "playback-speed-label": "Speed:",
-  "play-pause-btn": "Pause",
-  "save-settings-btn": "Save Settings",
-  "export-results-btn": "Export Results",
-  "earthquake-details-title": "Earthquake Details",
-  "earthquake-details": "Select a date range and simulate to see earthquake details.",
-  "significant-earthquakes-title": "Significant Earthquakes",
-  "magnitude": "Magnitude",
-  "epicenter": "Epicenter",
-  "date": "Date",
-  "loading-indicator": "Loading...",
-  "feedback-title": "Feedback",
-  "feedback-label": "Your Feedback:",
-  "submit-feedback": "Submit",
-  "no-data": "No earthquake data available for the selected date range.",
-  "location": "Location",
-  "time": "Time",
-  "pause": "Pause",
-  "play": "Play"
+  "title": "地震シミュレーション",
+  "start-date-label": "開始日:",
+  "end-date-label": "終了日:",
+  "min-magnitude-label": "最小マグニチュード:",
+  "max-magnitude-label": "最大マグニチュード:",
+  "simulate-btn": "シミュレーション",
+  "show-hotspots-btn": "ホットスポットを表示",
+  "time-slider-label": "時間:",
+  "playback-speed-label": "速度:",
+  "play-pause-btn": "一時停止",
+  "save-settings-btn": "設定を保存",
+  "export-results-btn": "結果をエクスポート",
+  "earthquake-details-title": "地震の詳細",
+  "earthquake-details": "日付範囲を選択してシミュレーションし、地震の詳細を確認します。",
+  "significant-earthquakes-title": "重要な地震",
+  "magnitude": "マグニチュード",
+  "epicenter": "震央",
+  "date": "日付",
+  "loading-indicator": "読み込み中...",
+  "feedback-title": "フィードバック",
+  "feedback-label": "フィードバック:",
+  "submit-feedback": "送信",
+  "no-data": "選択した日付範囲に使用できる地震データはありません。",
+  "location": "場所",
+  "time": "時間",
+  "pause": "一時停止",
+  "play": "再生"
 }
